--- a/smart-room.html
+++ b/smart-room.html
@@ -19,6 +19,7 @@
 	<link href="css/responsive.css" rel="stylesheet">
 	<link href="css/darkmode.css" rel="stylesheet">
 	<link href="css/fork-awesome.min.css" rel="stylesheet">
+	<link href="css/image-comparison-slider.css" rel="stylesheet">
 </head>
 
 <body>
@@ -477,15 +478,10 @@
 						<h3 class="text-center">Furniture Configuration</h3>
 						<p class="py-3 text-center">Experiment with different finishes, soft and modular furniture in many colors and tints, kitchen units, bedroom and living room furniture, sanitaryware office equipment, and so on.</p>
 					</div>
-					<div class="comparison-div">
-						<div class="comparison-slider">
-							<img src="images/solutions/smart-room/furniture-finishing-2.webp" alt="Furniture Fishing" class="img-fluid">
-							<div class="resize">
-								<img src="images/solutions/smart-room/furniture-finishing-1.webp" alt="Furniture Fishing" class="img-fluid">
-							</div>
-							<div class="divider"></div>
-						</div>
-
+					<div class="image-spliter">
+						<div class="mover"></div>
+						<img class="img-left" src="images/solutions/smart-room/furniture-finishing-2.webp" alt="Furniture Fishing" class="img-fluid">
+						<img class="img-right" src="images/solutions/smart-room/furniture-finishing-1.webp" alt="Furniture Fishing" class="img-fluid">
 					</div>
 				</div>
 
@@ -494,14 +490,10 @@
 						<h3 class="text-center">Light Customization</h3>
 						<p class="py-3 text-center">Ceiling-mounted fixtures, pendants, recessed lighting, track lighting and spotlights, and dimmable wall sconces are all examples of lighting fixtures with varied light patterns.</p>
 					</div>
-					<div class="comparison-div">
-						<div class="comparison-slider">
-							<img src="images/solutions/smart-room/lighting-customization-2.webp" alt="Light Customization" class="img-fluid">
-							<div class="resize">
-								<img src="images/solutions/smart-room/lighting-customization-1.webp" alt="Light Customization" class="img-fluid">
-							</div>
-							<div class="divider"></div>
-						</div>
+					<div class="image-spliter">
+						<div class="mover"></div>
+						<img class="img-left" src="images/solutions/smart-room/lighting-customization-2.webp" alt="Light Customization" class="img-fluid">
+						<img class="img-right" src="images/solutions/smart-room/lighting-customization-1.webp" alt="Light Customization" class="img-fluid">
 					</div>
 				</div>
 
@@ -510,14 +502,10 @@
 						<h3 class="text-center">Wall and floor Coverings</h3>
 						<p class="py-3 text-center">Wall and floor Coverings Choose from a variety of flooring textures, paints, stone wallpapers, tiles, PVC, and carpet varieties.</p>
 					</div>
-					<div class="comparison-div">
-						<div class="comparison-slider">
-							<img src="images/solutions/smart-room/floor-covering-customization-2.webp" alt="Interior Decor Accessories" class="img-fluid">
-							<div class="resize">
-								<img src="images/solutions/smart-room/floor-covering-customization-1.webp" alt="Interior Decor Accessories" class="img-fluid">
-							</div>
-							<div class="divider"></div>
-						</div>
+					<div class="image-spliter">
+						<div class="mover"></div>
+						<img class="img-left" src="images/solutions/smart-room/floor-covering-customization-2.webp" alt="Interior Decor Accessories" class="img-fluid">
+						<img class="img-right" src="images/solutions/smart-room/floor-covering-customization-1.webp" alt="Interior Decor Accessories" class="img-fluid">
 					</div>
 				</div>
 
@@ -526,14 +514,10 @@
 						<h3 class="text-center">Interior Decor Accessories</h3>
 						<p class="py-3 text-center">See what decor elements, such as curtains, pillows, tablecloths, ornamental craft goods, paintings, and plants, best match the interior.</p>
 					</div>
-					<div class="comparison-div">
-						<div class="comparison-slider">
-							<img src="images/solutions/smart-room/interior-decor-accessories-2.webp" alt="Interior Decor Accessories" class="img-fluid">
-							<div class="resize">
-								<img src="images/solutions/smart-room/interior-decor-accessories-1.webp" alt="Interior Decor Accessories" class="img-fluid">
-							</div>
-							<div class="divider"></div>
-						</div>
+					<div class="image-spliter">
+						<div class="mover"></div>
+						<img class="img-left" src="images/solutions/smart-room/interior-decor-accessories-2.webp" alt="Interior Decor Accessories" class="img-fluid">
+						<img class="img-right" src="images/solutions/smart-room/interior-decor-accessories-1.webp" alt="Interior Decor Accessories" class="img-fluid">
 					</div>
 				</div>
 			</div>
@@ -1174,5 +1158,6 @@
 	<script src="js/owl.navigation.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/font-awsome.js"></script>
+	<script src="js/image-comparison-slider.min.js"></script>
 
 </body>
