--- a/2d-and-3d-floor-plan-service.html
+++ b/2d-and-3d-floor-plan-service.html
@@ -19,7 +19,7 @@
 	<link href="css/responsive.css" rel="stylesheet">
 	<link href="css/darkmode.css" rel="stylesheet">
 	<link href="css/fork-awesome.min.css" rel="stylesheet">
-	<link href="css/comparsion-slider.css" rel="stylesheet">
+	<link href="css/image-comparison-slider.css" rel="stylesheet">
 </head>
 
 <body>
@@ -538,14 +538,11 @@
 					<div class="common-heading ptag">
 						<h2 class="text-center">Furniture Configuration</h2>
 					</div>
-					<div class="comparisonSliderWrapper">
-						<div class="comparisonSlider">
-							<img src="images/services/2d-3d-floor-plan-service/3d-floor-plan-color-1.webp" alt="marioPhoto 2">
-							<div class="resize">
-								<img src="images/services/2d-3d-floor-plan-service/3d-floor-plan-color-2.webp" alt="marioPhoto 1">
-							</div>
-							<div class="divider"></div>
-						</div>
+
+					<div class="image-spliter">
+						<div class="mover"></div>
+						<img class="img-left" src="images/services/2d-3d-floor-plan-service/3d-floor-plan-color-2.webp" alt="3d Floor Plan Color">
+						<img class="img-right" src="images/services/2d-3d-floor-plan-service/3d-floor-plan-color-1.webp" alt="3d Floor Plan Color">
 					</div>
 				</div>
 			</div>
@@ -968,6 +965,6 @@
 	<script src="js/owl.navigation.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/font-awsome.js"></script>
-	<script src="js/slidejs.js"></script>
+	<script src="js/image-comparison-slider.min.js"></script>
 
 </body>
