--- a/3d-exterior-rendering-services.html
+++ b/3d-exterior-rendering-services.html
@@ -531,6 +531,117 @@
 	</section>
     <!-- End 3D Exterior Visualizations -->
 
+	<!-- Start FAQ's -->
+	<section class="faq-section py-3 py-md-3 py-lg-5">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-lg-8">
+					<div class="common-heading">
+						<h2 class="mb0 common-heading">FAQS</h2>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12 mt60">
+					<div class="accordion" id="accordionExample-a">
+						<div class="accordion-item bdr0">
+							<h2 class="accordion-header" id="heading-b">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-1a" aria-expanded="true" aria-controls="collapseOne">
+									Why do you need 3D visualization of the exterior?
+								</button>
+							</h2>
+							<div id="collapse-1a" class="accordion-collapse collapse show" aria-labelledby="heading-b" data-bs-parent="#accordionExample-a">
+								<div class="accordion-body">
+									<div class="data-reqs">
+										<p>The use of a 3D exterior visualization service allows you to make the
+											following decisions during the development process without wasting time or
+											money: to integrate the new construction into the existing area in a
+											harmonic manner; Select the appropriate windows, doors, and roofing
+											materials, among other things;</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item bdr0">
+							<h2 class="accordion-header" id="heading-c">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-2a" aria-expanded="true" aria-controls="collapseOne">
+									How do you do exterior renderings?
+								</button>
+							</h2>
+							<div id="collapse-2a" class="accordion-collapse collapse" aria-labelledby="heading-c" data-bs-parent="#accordionExample-a">
+								<div class="accordion-body">
+									<div class="data-reqs">
+										<p>We begin by gathering the most important information about your project, such
+											as the site plan, roof plan, floor plans, required elevations, color and
+											material selection sheet, and landscape plan. Following that, we create a
+											preliminary 3D model, which is then presented for your approval. We perform
+											all necessary revisions and apply the chosen materials for high-quality
+											exterior renders if necessary. And here for the final high-resolution
+											rendering.
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item bdr0">
+							<h2 class="accordion-header" id="heading-c">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-3a" aria-expanded="true" aria-controls="collapseOne">
+									How much does exterior rendering cost?
+								</button>
+							</h2>
+							<div id="collapse-3a" class="accordion-collapse collapse" aria-labelledby="heading-c" data-bs-parent="#accordionExample-a">
+								<div class="accordion-body">
+									<div class="data-reqs">
+										<p>The cost of exclusive 3D exterior design services is determined on an
+											individual basis, based on the object's complexity, texture distribution,
+											and production schedule. Get a quote for your project by filling out the
+											form.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item bdr0">
+							<h2 class="accordion-header" id="heading-c">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-4a" aria-expanded="true" aria-controls="collapseOne">
+									How long does an exterior rendering process take?
+								</button>
+							</h2>
+							<div id="collapse-4a" class="accordion-collapse collapse" aria-labelledby="heading-c" data-bs-parent="#accordionExample-a">
+								<div class="accordion-body">
+									<div class="data-reqs">
+										<p class="pb-3">Because each project is unique, the complexity, number of
+											required visualizations, and accompanying revisions all play a role in its
+											development and completion.</p>
+
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item bdr0">
+							<h2 class="accordion-header" id="heading-c">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-5a" aria-expanded="true" aria-controls="collapseOne">
+									Can I order a rendering if I do not have a specific design in mind?
+								</button>
+							</h2>
+							<div id="collapse-5a" class="accordion-collapse collapse" aria-labelledby="heading-c" data-bs-parent="#accordionExample-a">
+								<div class="accordion-body">
+									<div class="data-reqs">
+										<p>Because we are not a design firm, we do not provide design services. Using
+											your reference photographs or links to specified goods, we can develop an
+											exceptional exterior 3d model. We'll put up a presentation with a few
+											furniture selections that meet the standards for you to choose from./p&gt;
+									</p></div>
+								</div>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End FAQ's -->
+
     <!-- Start Enquire Form -->
 	<section class="contact-page py-3 py-md-3 py-lg-5">
 		<div class="container">
