--- a/smart-touch.html
+++ b/smart-touch.html
@@ -769,25 +769,156 @@
 	</section>
     <!-- End Gallery -->
 
-	<!-- Start Why Choose -->
-	<section class="why-choose-section py-3 py-md-3 py-lg-5">
+	<!-- Start FAQ's -->
+	<section class="faq-section py-3 py-md-3 py-lg-5">
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-sm-12 col-md-10">
-					<div class="common-heading ptag">
-						<h2 class="text-white">Why Choose Us</h2>
-						<p class="pb-3 text-white">Along with designing and developing your web presence, we propose
-							business-oriented solutions that fit your needs and speak volumes of your values as a brand.
-							With experienced web developers and digital artisans, you get a state-of-the-art solution
-							with a cutting-edge appeal that engages more people online. Leverage powerful technologies &
-							robust architecture to build a web solution that fulfills your needs under packaged web
-							development services.</p>
+				<div class="col-lg-8">
+					<div class="common-heading">
+						<h2 class="mb0 common-heading">FAQS</h2>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12 mt60">
+					<div class="accordion" id="accordionExample-a">
+						<div class="accordion-item bdr0">
+							<h2 class="accordion-header" id="heading-b">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-1a" aria-expanded="true" aria-controls="collapseOne">
+									How much does smart touch product configuration software cost?
+								</button>
+							</h2>
+							<div id="collapse-1a" class="accordion-collapse collapse show" aria-labelledby="heading-b" data-bs-parent="#accordionExample-a">
+								<div class="accordion-body">
+									<div class="data-reqs">
+										<p>The cost is entirely dependent on the project, and all final decisions are taken from the start.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item bdr0">
+							<h2 class="accordion-header" id="heading-c">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-2a" aria-expanded="true" aria-controls="collapseOne">
+									What hardware is required to run the application? 
+								</button>
+							</h2>
+							<div id="collapse-2a" class="accordion-collapse collapse" aria-labelledby="heading-c" data-bs-parent="#accordionExample-a">
+								<div class="accordion-body">
+									<div class="data-reqs">
+										<p>Smart Touch is a desktop programme that requires a gaming computer with the required processing specifications to run.
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item bdr0">
+							<h2 class="accordion-header" id="heading-c">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-3a" aria-expanded="true" aria-controls="collapseOne">
+									Is this program compatible with all devices?
+								</button>
+							</h2>
+							<div id="collapse-3a" class="accordion-collapse collapse" aria-labelledby="heading-c" data-bs-parent="#accordionExample-a">
+								<div class="accordion-body">
+									<div class="data-reqs">
+										<p>We're now looking at the idea of porting the app to mobile devices. However, the one we're now using on a personal computer with a multi-touch display is rather large, necessitating the use of a strong video card.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item bdr0">
+							<h2 class="accordion-header" id="heading-c">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-4a" aria-expanded="true" aria-controls="collapseOne">
+									Does the web version of smart touch room software exist?
+								</button>
+							</h2>
+							<div id="collapse-4a" class="accordion-collapse collapse" aria-labelledby="heading-c" data-bs-parent="#accordionExample-a">
+								<div class="accordion-body">
+									<div class="data-reqs">
+										<p class="pb-3">Pixel streaming can be used to give remote access to smart touch. In this situation, you can use a conventional website link to visit the programme..</p>
+	
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item bdr0">
+							<h2 class="accordion-header" id="heading-c">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-5a" aria-expanded="true" aria-controls="collapseOne">
+									What file format and resolution are the screenshots?
+								</button>
+							</h2>
+							<div id="collapse-5a" class="accordion-collapse collapse" aria-labelledby="heading-c" data-bs-parent="#accordionExample-a">
+								<div class="accordion-body">
+									<div class="data-reqs">
+										<p>The format of the screenshot are in the form of jpg files with 4k resolution,/p&gt;
+									</p></div>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item bdr0">
+							<h2 class="accordion-header" id="heading-c">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-6a" aria-expanded="true" aria-controls="collapseOne">
+									Is it possible to set up some specific camera angles to switch between?
+								</button>
+							</h2>
+							<div id="collapse-6a" class="accordion-collapse collapse" aria-labelledby="heading-c" data-bs-parent="#accordionExample-a">
+								<div class="accordion-body">
+									<div class="data-reqs">
+										<p>You can rotate your product 360 degrees or switch between the current cameras to investigate it. We anticipate you to declare this at the project's outset.</p>
+
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item bdr0">
+							<h2 class="accordion-header" id="heading-c">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-7a" aria-expanded="true" aria-controls="collapseOne">
+									Is it possible to run several smart touch room projects at the same time?
+								</button>
+							</h2>
+							<div id="collapse-7a" class="accordion-collapse collapse" aria-labelledby="heading-c" data-bs-parent="#accordionExample-a">
+								<div class="accordion-body">
+									<div class="data-reqs">
+										<p>You can create an endless number of smart touch projects from a single device, but not at the same time.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item bdr0">
+							<h2 class="accordion-header" id="heading-c">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-8a" aria-expanded="true" aria-controls="collapseOne">
+									What about the tech support and software update if smart touch goes out of business?
+								</button>
+							</h2>
+							<div id="collapse-8a" class="accordion-collapse collapse" aria-labelledby="heading-c" data-bs-parent="#accordionExample-a">
+								<div class="accordion-body">
+									<div class="data-reqs">
+										<p>Smart Touch is a well-known firm that has been in operation for the past six years. We may always negotiate teaching your team how to upgrade the software for an extra price if you want to be safe.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="accordion-item bdr0">
+							<h2 class="accordion-header" id="heading-c">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-9a" aria-expanded="true" aria-controls="collapseOne">
+									Buying your software seems like a big investment for us - will it pay off? 
+								</button>
+							</h2>
+							<div id="collapse-9a" class="accordion-collapse collapse" aria-labelledby="heading-c" data-bs-parent="#accordionExample-a">
+								<div class="accordion-body">
+									<div class="data-reqs">
+										<p>Smart Touch is a well-known firm that has been in operation for the past six years. We may always negotiate teaching your team how to upgrade the software for an extra price if you want to be safe.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						
+
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<!-- End Why Choose -->
+	<!-- End FAQ's -->
 
 	<!-- Start Enquire Form -->
 	<section class="contact-page py-3 py-md-3 py-lg-5">
