--- a/index.html
+++ b/index.html
@@ -465,10 +465,10 @@
 				<div class="col-lg-10">
 					<div class="common-heading">
 						<span>We Are Creative Agency</span>
-						<h1 class="mb30"><span class="text-second">Top-rated</span> Web And Mobile App Development Company</h1>
-						<p>Futurealiti is a leading Web/ App development company with an award-winning team. The main aim of Futurealiti is to develop a Client-Focused, Customer-Centric, and Flexible Web and App solution for their clients so they can scale their business upto 10x times. We Help you improve your branding, increase conversion rates and maximize your revenue.</p>
-						<h3 class="mt30 mb30">Our High-End Mobile App Development Services</h3>
-						<p>Our high-end mobile app and web development process is unique. Our company offers a full cycle of application design, integration, and management services. Our professional team leads the entire mobile app development process from concept framing to delivery and supports their customers until they not satisfied.</p>
+						<h2 class="mb30 text-center"><span class="text-second">Top-rated</span> Web And Mobile App Development Company</h2>
+						<p class="text-center">Futurealiti is a leading Web/ App development company with an award-winning team. The main aim of Futurealiti is to develop a Client-Focused, Customer-Centric, and Flexible Web and App solution for their clients so they can scale their business upto 10x times. We Help you improve your branding, increase conversion rates and maximize your revenue.</p>
+						<h3 class="mt30 mb30 text-center">Our High-End Mobile App Development Services</h3>
+						<p class="text-center">Our high-end mobile app and web development process is unique. Our company offers a full cycle of application design, integration, and management services. Our professional team leads the entire mobile app development process from concept framing to delivery and supports their customers until they not satisfied.</p>
 					</div>
 				</div>
 			</div>
@@ -2186,8 +2186,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="common-heading ptag">
-                        <h2>Why Hire us?</h2>
-                        <p class="pb-3">Futurealiti is the leading brand when we talk about the Web development, app development and AR and VR Solutions.We have a team of 50 plus highly trained professional who give you result oriented services.Futurealiti is an award wininng company partner with many world's biggest technology companies.We beleive in quality our team will deliver best results until you not satisfied.</p>
+                        <h2 class="text-center">Why Hire us?</h2>
+                        <p class="pb-3 text-center">Futurealiti is the leading brand when we talk about the Web development, app development and AR and VR Solutions.We have a team of 50 plus highly trained professional who give you result oriented services.Futurealiti is an award wininng company partner with many world's biggest technology companies.We beleive in quality our team will deliver best results until you not satisfied.</p>
                     </div>
                 </div>
             </div>
