ar-page-updated

--- a/augmented-reality-in-real-estate.html
+++ b/augmented-reality-in-real-estate.html
@@ -463,7 +463,7 @@
 
 	<!-- Start AR Center Image -->
 	<section>
-		<img src="images/solutions/augmented-reality-in-real-estate/ar-real-estate-center-banner.webp" alt="AR Real Estate" class="img-fluid">
+		<img src="images/solutions/augmented-reality-in-real-estate/ar-real-estate-center-banner.webp" alt="AR Real Estate" class="img-fluid ar-center-img">
 	</section>
 	<!-- End VR Center Image -->
 
