--- a/virtual-reality-in-real-estate.html
+++ b/virtual-reality-in-real-estate.html
@@ -453,7 +453,7 @@
 
 	<!-- Start VR Center Image -->
 	<section>
-		<img src="images/solutions/virtual-reality-in-real-estate/vr-real-estate-center-img1.webp" alt="VR Real Estate" class="img-fluid">
+		<img src="images/solutions/virtual-reality-in-real-estate/vr-real-estate-center-img1.webp" alt="VR Real Estate" class="img-fluid vr-center-img">
 	</section>
 	<!-- End VR Center Image -->
 
@@ -490,7 +490,7 @@
 
 	<!-- Start VR Center Image -->
 	<section>
-		<img src="images/solutions/virtual-reality-in-real-estate/vr-real-estate-center-img2.webp" alt="VR Real Estate" class="img-fluid">
+		<img src="images/solutions/virtual-reality-in-real-estate/vr-real-estate-center-img2.webp" alt="VR Real Estate" class="img-fluid vr-center-img">
 	</section>
 	<!-- End VR Center Image -->
 
@@ -528,7 +528,7 @@
 
 	<!-- Start VR Center Image -->
 	<section>
-		<img src="images/solutions/virtual-reality-in-real-estate/vr-real-estate-center-img3.webp" alt="VR Real Estate" class="img-fluid">
+		<img src="images/solutions/virtual-reality-in-real-estate/vr-real-estate-center-img3.webp" alt="VR Real Estate" class="img-fluid vr-center-img">
 	</section>
 	<!-- End VR Center Image -->
 
