ar-vr page updated and xr page created

--- a/augmented-reality-development.html
+++ b/augmented-reality-development.html
@@ -469,7 +469,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 wow fadeInLeft">
-                    <h2 class="common-heading">Augmented Reality</h2>
+                    <h2>Augmented Reality</h2>
                     <h4 class="pt-2">Is The Game Changer – You Must Own It</h4>
                     <p class="pt-2">We have seen how quickly augmented reality has become a part of everyday life. The immersive experience provided by AR has grown so prevalent that it is no longer considered an exotic tech. That is unquestionably excellent news for businesses. But, especially when companies wish to communicate with clients online but cannot afford to in person, here's a question that most astute business people would ask. Is it worth it to invest in Augmented Reality app development?</p>
                     <p class="pt-2">There are many advantages of Augmented Reality that cannot be overstated. In fact, they are so concrete and have measurable benefits that marketers have already begun to use AR to their advantage. </p>
@@ -855,6 +855,71 @@
 		</div>
 	</section>
 	<!--End Case Studies-->
+
+	<!--Start Equipment-->
+	<section class="equipment py-3 py-md-3 py-lg-5" id="equipment">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-lg-10">
+					<div class="common-heading wow fadeInLeft">
+						<h2>Augmented Reality Equipment We Work On</h2>
+						<p class="pt-2">The skilled development team at Future Reality is ready to provide multi-platform solutions that serve a wide range of applications, from customer-centric activities to enterprise-grade goods.</p>
+					</div>
+				</div>
+			</div>
+			<div class="row mt-5">
+				<div class="col-sm-12">
+					<div class="equipment-slider owl-carousel">
+						<div class="equipment-item">
+							<div class="item">
+								<div class="card">
+									<img src="images/services/ar-development/android.webp">
+									<div class="card-body">
+										<h5 class="text-center">Andriod</h5>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="equipment-item">
+							<div class="item">
+								<div class="card">
+									<img src="images/services/ar-development/ios.webp">
+									<div class="card-body">
+										<h5 class="text-center">iOS</h5>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="equipment-item">
+							<div class="card">
+								<img src="images/services/ar-development/smart-glasses.webp">
+								<div class="card-body">
+									<h5 class="text-center">Smart Classes</h5>
+								</div>
+							</div>
+						</div>
+						<div class="equipment-item">
+							<div class="card">
+								<img src="images/services/ar-development/head-mounted-displays.webp">
+								<div class="card-body">
+									<h5 class="text-center">Head-Mounted Displays</h5>
+								</div>
+							</div>
+						</div>
+						<div class="equipment-item">
+							<div class="card">
+								<img src="images/services/ar-development/hololens.webp">
+								<div class="card-body">
+									<h5 class="text-center">HoloLens</h5>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--End Equipment-->
 
     <!-- Start Our Process -->
     <section class="ar-process py-3 py-md-3 py-lg-5" id="process">
@@ -1802,7 +1867,7 @@
 												</div>
 											</div>
 										</div>
-                                        <div class="col-sm-6 col-md-6 col-lg-4 mt-3 mt-lg-0">
+                                        <div class="col-sm-6 col-md-6 col-lg-4 mt-3">
 											<div class="card">
 												<div class="card-body">
 													<img src="images/tech/blender-logo.webp" class="img-fluid d-block mx-auto" alt="Blender">
