--- a/index.html
+++ b/index.html
@@ -126,14 +126,15 @@
 											</div>
 											<div class="sub-menu-column">
 												<ul>
+													<li><a href="augmented-reality-development.html">Augmented Reality Development</a></li>
 													<li><a href="virtual-reality-development.html">Virtual Reality Development</a>	</li>
 													<li><a href="mixed-reality-development.html">Mixed Reality Development</a></li>
-													<li><a href="industrial-automation.html">Industrial Automation</a></li>
+													<li><a href="extended-reality-development.html">Extended Reality Development</a></li>
 												</ul>
 											</div>
 											<div class="sub-menu-column">
 												<ul>
-													<li><a href="augmented-reality-development.html">Augmented Reality Development</a></li>
+													<li><a href="industrial-automation.html">Industrial Automation</a></li>
 													<li><a href="mobile-app-development.html">Mobile App Development</a></li>
 													<li><a href="animation-services.html">Animation Services</a></li>
 												</ul>
