--- a/augmented-reality-development.html
+++ b/augmented-reality-development.html
@@ -869,7 +869,7 @@
 			</div>
 			<div class="row mt-5">
 				<div class="col-sm-12">
-					<div class="equipment-slider owl-carousel">
+					<div class="equipment-slider owl-carousel wow fadeInRight">
 						<div class="equipment-item">
 							<div class="item">
 								<div class="card">
