--- a/extended-reality-development.html
+++ b/extended-reality-development.html
@@ -726,6 +726,63 @@
 	</section>
     <!-- End Benefits -->
 
+	<!--Start Equipment-->
+	<section class="equipment py-3 py-md-3 py-lg-5" id="equipment">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-lg-10">
+					<div class="common-heading wow fadeInLeft">
+						<h2>Extended Reality Equipment We Work On</h2>
+						<p class="pt-2">The skilled development team at Future Reality is ready to provide multi-platform solutions that serve a wide range of applications, from customer-centric activities to enterprise-grade goods.</p>
+					</div>
+				</div>
+			</div>
+			<div class="row mt-5">
+				<div class="col-sm-12">
+					<div class="equipment-slider owl-carousel">
+						<div class="equipment-item">
+							<div class="item">
+								<div class="card">
+									<img src="images/services/xr-development/microsoft-hololens.webp">
+									<div class="card-body">
+										<h5 class="text-center">Microsoft HoloLens</h5>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="equipment-item">
+							<div class="item">
+								<div class="card">
+									<img src="images/services/xr-development/vuforia-logo.webp">
+									<div class="card-body">
+										<h5 class="text-center">Vuforia</h5>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="equipment-item">
+							<div class="card">
+								<img src="images/services/xr-development/thingworx-logo.webp">
+								<div class="card-body">
+									<h5 class="text-center">Thingworx</h5>
+								</div>
+							</div>
+						</div>
+						<div class="equipment-item">
+							<div class="card">
+								<img src="images/services/xr-development/spatial-logo.webp">
+								<div class="card-body">
+									<h5 class="text-center">Spatial</h5>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--End Equipment-->
+
     <!-- Start Our Process -->
     <section class="xr-process py-3 py-md-3 py-lg-5" id="process">
         <div class="container">
