--- a/virtual-reality-development.html
+++ b/virtual-reality-development.html
@@ -693,7 +693,7 @@
                         <li class="nav-item"><a class="nav-link" id="thirteenth-tab" data-bs-target="#panel_b_thirteenth" data-bs-secondary="#panel_a_thirteenth" data-bs-toggle="tab" href="#thirteenth" role="tab" aria-controls="thirteenth" aria-selected="false">Entertainment</a></li>
                     </ul>
 					<div class="tab-content pt-sm-2 pt-md-5" id="texttab">
-							<div class="tab-pane fade features-content active show" id="panel_b_second" role="tabpanel" aria-labelledby="second-tab">
+						<div class="tab-pane fade features-content active show" id="panel_b_second" role="tabpanel" aria-labelledby="second-tab">
 							<h3>Healthcare</h3>
 							<p class="pt-2">Virtual Reality app development for healthcare facilities panders to the needs of mental illness treatment, student education, and surgical practices, including medical training sessions on virtual models of organs and whole bodies.</p>
 						</div>
@@ -930,14 +930,14 @@
 			<div class="row justify-content-center">
 				<div class="col-lg-10">
 					<div class="common-heading wow fadeInLeft">
-						<h2>Augmented Reality Equipment We Work On</h2>
-						<p class="pt-2">The skilled development team at Future Reality is ready to provide multi-platform solutions that serve a wide range of applications, from customer-centric activities to enterprise-grade goods.</p>
+						<h2 class="text-center">Virtual Reality Equipment We Work On</h2>
+						<p class="pt-2 text-center">The skilled development team at Future Reality is ready to provide multi-platform solutions that serve a wide range of applications, from customer-centric activities to enterprise-grade goods.</p>
 					</div>
 				</div>
 			</div>
 			<div class="row mt-5">
 				<div class="col-sm-12">
-					<div class="equipment-slider owl-carousel">
+					<div class="equipment-slider owl-carousel wow fadeInRight">
 						<div class="equipment-item">
 							<div class="item">
 								<div class="card">
@@ -1877,7 +1877,7 @@
                                         <div class="col-sm-6 col-md-6 col-lg-4 mt-3">
 											<div class="card">
 												<div class="card-body">
-													<img src="images/tech/blender-logo.webp" class="img-fluid d-block mx-auto" alt="SketchUp">
+													<img src="images/tech/sketchup-logo.webp" class="img-fluid d-block mx-auto" alt="SketchUp">
 													<p class="text-center pt-2">Hire SketchUp</p>
 												</div>
 											</div>
