metaverse page completed

--- a/extended-reality-development.html
+++ b/extended-reality-development.html
@@ -459,7 +459,7 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-lg-6 my-auto wow fadeInLeft">
-					<h2 class="common-heading text-white">Augmented Reality (AR) Development</h2>
+					<h2 class="text-white">Augmented Reality (AR) Development</h2>
 					<p class="pt-2 text-white">We are a full-service augmented reality game development company dedicated to making your AR gaming dreams a reality. We assist you in understanding how an AR game is made, what it takes to create a game and the business elements of owning an AR game. Our specialists have been building AR games for years and have worked with various game themes and concepts.</p>
 					<p class="pt-2 text-white">Future Reality shakes up the reality of your business with AR development services. Our AR development services primarily focus on arousing various human perceptions and receiving unparalleled levels of involvement. </p>
 					<div class="mt-4 game-button">
@@ -482,7 +482,7 @@
 					<img src="images/services/game-development/vr-game-development-image.webp" alt="VR Development" class="vr-game-development-image img-fluid">
 				</div>
 				<div class="col-lg-6 wow fadeInRight">
-					<h2 class="common-heading text-white">Virtual Reality (VR) Development</h2>
+					<h2 class="text-white">Virtual Reality (VR) Development</h2>
 					<p class="pt-2 text-white">Virtual Reality (VR) is a revolutionizing technology that offers users an immersive experience of an imaginary or real-world through computer modeling and simulation. In short, a person can interact with an artificially designed 3D world via VR headsets.</p>
 					<p class="pt-2 text-white">We are a professional and expert Virtual Reality (VR) development company on a mission to bring life to the ingenious dreams of businesses. With this powerful technology and expertise, your every fantasy of maximum customer engagement can be achieved.</p>
 					<div class="mt-4 game-button">
@@ -499,7 +499,7 @@
 		<div class="container">
 			<div class="row justify-content-center mb-5">
 				<div class="col-lg-6 wow fadeInLeft">
-					<h2 class="common-heading text-white">Mixed Reality (MR) Development</h2>
+					<h2 class="text-white">Mixed Reality (MR) Development</h2>
 					<p class="pt-2 text-white">Mixed Reality (MR) is here to bridge the real and virtual world gap. The viewer may see virtual items that seem genuine and are perfectly mapped onto the actual environment thanks to MR – holographic lenses are used to merge VR and AR, allowing virtual things to interact with real-world objects.</p>
 					<p class="pt-2 text-white">We hold a firm grasp over MR to empower businesses with tempting marketing campaigns, a chance to collaborate with tech giants, an achievement to be supreme in the market, and most importantly, an entrance to the great market of holographic apps.</p>
 					<div class="mt-4 game-button">
